issue - rerender too much everytime

--- a/insta/src/components/Profile/Posts.module.css
+++ b/insta/src/components/Profile/Posts.module.css
@@ -2,7 +2,7 @@
   /* background-color: #f4f4f4; */
   /* border: 1px solid #ddd; */
   cursor: pointer;
-  padding: 20px;
+  /* padding: 20px; */
   /* text-align: center; */
   /* font-size: 20px; */
 
@@ -11,7 +11,7 @@
   /* background-color: #f4f4f4; */
   background-image: url(../../../public/main_section_1_img2.jpg);
   /* background-image: url("https://m.cattery.co.kr/_dj/img/main_section_1_img2.jpg"); */
-  background-size: 195px;
+  background-size: 150px;
   background-repeat: no-repeat;
   background-position-y: -6px;
   background-position: center;
@@ -20,4 +20,13 @@
   justify-content: center;
   font-size: 20px;
   border: 1px solid #ddd;
+}
+
+.hover {
+  background-color: rgba(111, 111, 111, 0.5);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
